--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
 
 :root{
     --primary-color: #0A1128;
+    --secundary-color: #dc143c;
     --white-color: #fff;
+    --light-gray-logor:#eee;
     --gap: 3rem;
 }
 
@@ -14,6 +16,7 @@
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -35,15 +38,25 @@ h1{
 }
 
 h2{
-    font-size: 5.5rem;
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-transform: uppercase;
 }
 
 h3{
     font-size: 5rem;
 }
 
+a{
+    text-decoration: none;
+}
+
+p{
+    margin-bottom: 2rem;
+}
+
 .main-content{
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
     padding: var(--gap);
 }
@@ -58,9 +71,101 @@ h3{
 
 .white-bg{
     background: var(--white-color);
+    color: var(--primary-color);
 }
 
 
 .section{
     min-height: 100vh;
+}
+
+.menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1;
+    border-bottom: 0.1rem solid var(--light-gray-logor);
+}
+
+.menu-spacing{
+    height: 6.5rem;
+}
+
+.menu-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.menu ul{
+    list-style: none;
+    display: flex;
+}
+
+.menu h1{
+    font-size: 2.3rem;
+    color: var(--primary-color);
+}
+
+.menu h1 a{
+    color: inherit;
+}
+
+.menu ul li a{
+    display: block;
+    padding: 2rem;
+    font-size: 1.8rem;
+    color: var(--primary-color);
+    position: relative;
+}
+
+.menu ul li a::after{
+    content: '';
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 0;
+    height: 0.2rem;
+    background-color: var(--secundary-color);
+    transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover::after{
+    width: 50%;
+    left: 25%;
+}
+
+.intro-content{
+    position: relative;
+    top: -2.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    align-items: center;
+    gap: var(--gap);
+    height: 100vh;
+}
+
+.intro-text-content,
+.intro-img{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.intro-img img {
+    max-width: 100%;
+    height: auto;
+}
+
+.top3-content{
+    max-width: 64rem;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
 }
