--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ p{
 
 .intro-content{
     position: relative;
-    top: -2.5rem;
+    /* top: -2.5rem; */
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     align-items: center;
@@ -207,4 +207,129 @@ p{
     top: -4rem;
     left: -2rem;
     transform: rotate(5deg);
+}
+
+.gallery-img{
+    width: 100%;
+    max-width: 36rem;
+    max-height: 36rem;
+    overflow: hidden;
+}
+
+.gallery-img img{
+    transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover{
+    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
+
+.responsive-table{
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+table{
+    min-width: 36rem;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table caption{
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+table td,
+table th{
+    white-space: nowrap;
+    padding: 0.5rem;
+    text-align: left;
+    border: 1rem solid var(--light-gray-logor);
+}
+
+tfoot td,
+table th{
+    background-color: var(--light-gray-logor);
+}
+
+.contact-form{
+    grid-column: span 2;
+}
+
+.contact-form .form-grid{
+    border: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-grid legend{
+    font-style: italic;
+    font-size: 1.6rem;
+    margin-bottom: 3rem;
+}
+
+.form-group{
+    flex: 1 1 32rem;
+}
+
+.form-group label{
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.form-group input,
+.form-group textarea{
+    border: none;
+    font-size: 2rem;
+    background-color: var(--white-color);
+    padding: 1.5rem 2rem;
+    width: 100%;   
+}
+
+.form-group input:focus,
+.form-group textarea:focus{
+    box-shadow: 0 0 10px 2px var(--secundary-color);
+}
+
+body .full-width{
+    width: 100%;
+    flex: 1 1 100%;
+}
+
+.form-group button{
+    border: 0.5rem solid var(--white-color);
+    background: none;
+    color: var(--white-color);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.form-group button:hover{
+    border: 0.5rem solid var(--primary-color);
+    background-color: var(--white-color);
+    color: var(--primary-color) ;
+}
+
+.footer{
+    text-align: center;
+    font-size: 1.6rem;
+}
+
+.footer a{
+    color: var(--primary-color);
+}
+
+.heart{
+    color: var(--secundary-color);
+}
+
+.footer p{
+    margin: 0;
+    padding: 2rem;
 }
