--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ p{
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
 }
 
@@ -332,4 +332,85 @@ body .full-width{
 .footer p{
     margin: 0;
     padding: 2rem;
+}
+
+.close-menu{
+    display: none;
+}
+
+.back-to-top{
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background-color: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    transform: rotate(-90deg);
+    border: 0.1rem solid var(--primary-color);
+}
+
+@media(max-width: 800px){
+    .intro-content,
+    .grid{
+        grid-template-columns: 1fr;
+    }
+
+    .gallery-img{
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        overflow: hidden;
+    }
+
+    .gallery-img img{
+        width: 100%;
+    }
+
+    .menu{
+        text-align: center;
+        bottom: 0;
+        display: none;
+    }
+    .menu-content,
+    .menu-content ul{
+        flex-direction: column;
+        justify-content: center;
+        
+        
+    }
+    .menu-content{
+        height: 100vh;
+    }
+
+    .close-menu-label::after{
+        content: '☰';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background-color: var(--primary-color);
+        color: var(--white-color);
+        font-size: 3rem;
+        line-height: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+    }
+    .close-menu:checked~.menu{
+        display: block;
+    }
+    .close-menu:checked~.close-menu-label::after{
+        content: '×';
+        width: 2.5rem;
+    }
+
+    .menu-spacing{
+        display: none;
+    }
 }
